--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Hero from '../components/Hero.astro';
+import Experience from '../components/Experience.astro';
 import Projects from '../components/Projects.astro';
 import Layout from '../layouts/Layout.astro';
 
@@ -10,4 +11,5 @@ import Layout from '../layouts/Layout.astro';
 <Layout>
 	<Hero />
 	<Projects />
+	<Experience />
 </Layout>
