--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,16 @@ import "../styles/global.css";
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link
+			rel="icon"
+			type="image/svg+xml"
+			href={import.meta.env.BASE_URL + "favicon.svg"}
+		/>
+		<link
+			rel="icon"
+			type="image/x-icon"
+			href={import.meta.env.BASE_URL + "favicon.ico"}
+		/>
 		<meta name="generator" content={Astro.generator} />
 		<title>Alex Ariza | Software Engineer</title>
 
