--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,12 +10,12 @@ import "../styles/global.css";
 		<link
 			rel="icon"
 			type="image/svg+xml"
-			href={import.meta.env.BASE_URL + "favicon.svg"}
+			href={`${import.meta.env.BASE_URL}/favicon.svg`}
 		/>
 		<link
 			rel="icon"
 			type="image/x-icon"
-			href={import.meta.env.BASE_URL + "favicon.ico"}
+			href={`${import.meta.env.BASE_URL}/favicon.ico`}
 		/>
 		<meta name="generator" content={Astro.generator} />
 		<title>Alex Ariza | Software Engineer</title>
