--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+const base = import.meta.env.BASE_URL.replace(/\/$/, "");
 ---
 
 <!doctype html>
@@ -7,16 +8,8 @@ import "../styles/global.css";
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link
-			rel="icon"
-			type="image/svg+xml"
-			href={`${import.meta.env.BASE_URL}favicon.svg`}
-		/>
-		<link
-			rel="icon"
-			type="image/x-icon"
-			href={`${import.meta.env.BASE_URL}favicon.ico`}
-		/>
+		<link rel="icon" type="image/svg+xml" href={`${base}/favicon.svg`} />
+		<link rel="icon" type="image/x-icon" href={`${base}/favicon.ico`} />
 		<meta name="generator" content={Astro.generator} />
 		<title>Alex Ariza | Software Engineer</title>
 
